--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -32,6 +32,7 @@ microservice-chart:
     tag: "1.36.2"
     pullPolicy: Always
   livenessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/liveness
       port: 8080
@@ -39,6 +40,7 @@ microservice-chart:
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/readiness
       port: 8080
@@ -74,18 +76,23 @@ microservice-chart:
       cpu: "300m"
     limits:
       memory: "768Mi"
-      cpu: "500m"
+      cpu: "900m"
   autoscaling:
     enable: true
     minReplica: 5
     maxReplica: 10
     pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
+    cooldownPeriod: 30 # seconds
     triggers:
       - type: cpu
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
+    advanced:
+      horizontalPodAutoscalerConfig:
+        behavior:
+          scaleUp:
+            stabilizationWindowSeconds: 60
   strategy:
     type: "RollingUpdate"
     rollingUpdate:
