--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,7 @@ resilience4j.retry:
         - it.pagopa.transactions.exceptions.InvalidNodoResponseException
         - it.pagopa.transactions.exceptions.PaymentMethodNotFoundException
         - it.pagopa.transactions.exceptions.NpgNotRetryableErrorException
+        - it.pagopa.transactions.exceptions.LockNotAcquiredException
     updateTransactionAuthorization:
       maxAttempts: 3
       waitDuration: 2s
@@ -58,6 +59,7 @@ resilience4j.retry:
         - it.pagopa.transactions.exceptions.TransactionAmountMismatchException
         - it.pagopa.transactions.exceptions.NodoErrorException
         - it.pagopa.transactions.exceptions.InvalidNodoResponseException
+        - it.pagopa.transactions.exceptions.LockNotAcquiredException
     cancelTransaction:
       maxAttempts: 3
       waitDuration: 2s
