add temporary branch to fix ecommerce local integration tests

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,7 +12,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local 
-      ref: main
+      ref: CHK-3299-user-stats-service
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
