--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,7 +94,7 @@ npg.authorization.satispay.keys=${NPG_SATISPAY_PSP_KEYS}
 npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
 npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
 npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
-authorization.savelastmethodtimeout.seconds=${SAVE_LAST_METHOD_USED_TIMEOUT}
+authorization.savelastmethoddelay.seconds=${SAVE_LAST_METHOD_USED_DELAY}
 npg.authorization.retry.excluded.error.codes=${NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
