--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -81,7 +81,7 @@ npg.authorization.satispay.keys={"psp1-satispay":"satispay-key1","psp2-satispay"
 npg.authorization.satispay.pspList=psp1-satispay,psp2-satispay
 npg.authorization.applepay.keys={"psp1-applepay":"applepay-key1","psp2-applepay":"applepay-key2"}
 npg.authorization.applepay.pspList=psp1-applepay,psp2-applepay
-authorization.savelastmethoddelay.seconds=0
+authorization.event.visibilityTimeoutSeconds=0
 npg.authorization.retry.excluded.error.codes=GW0004,GW0035
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
