--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -158,7 +158,7 @@ microservice-chart:
     NPG_URI: "https://xpay.nexigroup.com/api/phoenix-0.0"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
-    NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31,IFSPIT21"
+    NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31,IFSPIT21,BCEPITMM"
     NPG_PAYPAL_PSP_LIST: ""
     NPG_MYBANK_PSP_LIST: "UNCRITMM"
     NPG_BANCOMATPAY_PSP_LIST: ""
