--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBro
 NODO_PARALLEL_REQUESTS=5
 NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED=false
 NODO_ECOMMERCE_CLIENT_ID=ecommdev
+NODO_NODEFORPSP_API_KEY=KEY
+NODO_CLOSEPAYMENT_API_KEY=KEY
+
 
 ECOMMERCE_PAYMENT_METHODS_URI="http://pagopa-ecommerce-payment-methods-service:8080"
 ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT=10000
