--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -8,6 +8,8 @@ nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"i
 nodo.parallelRequests=5
 nodo.allCCPOnTransferIbanEnabled=true
 nodo.ecommerce.clientId=ecomm
+nodo.nodeforpsp.apikey=KEY
+nodo.closepayment.apikey=KEY
 
 nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
