--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -113,7 +113,7 @@ microservice-chart:
     REDIS_SSL_ENABLED: "true"
     NODO_HOSTNAME: https://api.uat.platform.pagopa.it
     NODE_FOR_PSP_URI: /nodo-auth/node-for-psp/v1
-    NODO_PER_PM_URI: /nodo/nodo-per-pm/v2
+    NODO_PER_PM_URI: /nodo-auth/nodo-per-pm/v2
     NODO_READ_TIMEOUT: "14000"
     NODO_CONNECTION_TIMEOUT: "14000"
     NODO_PARALLEL_REQUESTS: "5"
