feat(api v2): patch auth request transaction id

--- a/api-spec/v2/transactions-api.yaml
+++ b/api-spec/v2/transactions-api.yaml
@@ -130,6 +130,53 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+  /v2/transactions/{transactionId}/auth-requests:
+    patch:
+      tags:
+        - transactions
+      operationId: updateTransactionAuthorization
+      summary: Update authorization
+      description: Callback endpoint used for notify authorization outcome
+      parameters:
+        - in: path
+          name: transactionId
+          schema:
+            type: string
+          required: true
+          description: Base64 of bytes related to TransactionId
+      requestBody:
+        $ref: "#/components/requestBodies/UpdateAuthorizationRequest"
+      responses:
+        '200':
+          description: Transaction authorization request successfully updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UpdateAuthorizationResponse"
+        '400':
+          description: Invalid transaction id
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        '404':
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        '502':
+          description: Bad gateway
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
 components:
   schemas:
     RptId:
@@ -837,6 +884,108 @@ components:
         - status
         - transactionId
         - payments
+    UpdateAuthorizationResponse:
+      type: object
+      description: Update authorization response
+      properties:
+        status:
+          $ref: '#/components/schemas/TransactionStatus'
+      required:
+        - status
+    UpdateAuthorizationRequest:
+      type: object
+      description: Request body for updating an authorization for a transaction
+      properties:
+        outcomeGateway:
+          type: object
+          oneOf:
+            - $ref: '#/components/schemas/OutcomeNpgGateway'
+            - $ref: '#/components/schemas/OutcomeRedirectGateway'
+          discriminator:
+            propertyName: paymentGatewayType
+            mapping:
+              NPG: '#/components/schemas/OutcomeNpgGateway'
+              REDIRECT: '#/components/schemas/OutcomeRedirectGateway'
+        timestampOperation:
+          type: string
+          format: date-time
+          description: Payment timestamp
+      required:
+        - outcomeGateway
+        - timestampOperation
+
+        - GENERIC_ERROR
+    OutcomeNpgGateway:
+      type: object
+      properties:
+        paymentGatewayType:
+          type: string
+          example: 'NPG'
+        operationResult:
+          type: string
+          description: outcome received by NPG - https://developer.nexi.it/it/api/notifica
+          enum:
+            - AUTHORIZED
+            - EXECUTED
+            - DECLINED
+            - DENIED_BY_RISK
+            - THREEDS_VALIDATED
+            - THREEDS_FAILED
+            - PENDING
+            - CANCELED
+            - VOIDED
+            - REFUNDED
+            - FAILED
+        orderId:
+          description: Operator unique order ID
+          type: string
+        operationId:
+          description: Operation ID
+          type: string
+        authorizationCode:
+          type: string
+          description: Authorization code
+        errorCode:
+          type: string
+          description: Error code
+        paymentEndToEndId:
+          description: Circuit unique transaction ID
+          type: string
+        rrn:
+          description: Transaction rrn
+          type: string
+        validationServiceId:
+          description: Validation service id
+          type: string
+      required:
+        - paymentGatewayType
+        - operationResult
+    OutcomeRedirectGateway:
+      type: object
+      properties:
+        paymentGatewayType:
+          type: string
+          example: REDIRECT
+          description: disciminator field. fixed value `REDIRECT`
+        pspTransactionId:
+          type: string
+          description: PSP transaction unique ID
+        outcome:
+          $ref: 'https://raw.githubusercontent.com/pagopa/pagopa-api/SANP3.6.1/openapi/redirect.yaml#/components/schemas/AuthorizationOutcome'
+        pspId:
+          type: string
+          description: PSP ID from which the authorization outcome request come
+        authorizationCode:
+          type: string
+          description: payment authorization code
+        errorCode:
+          type: string
+          description: payment error code
+      required:
+        - paymentGatewayType
+        - pspId
+        - outcome
+        - pspTransactionId
   requestBodies:
     NewTransactionRequest:
       required: true
@@ -844,3 +993,9 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/NewTransactionRequest"
+    UpdateAuthorizationRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/UpdateAuthorizationRequest"
