--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ nodo.parallelRequests=${NODO_PARALLEL_REQUESTS}
 nodo.allCCPOnTransferIbanEnabled=${NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED}
 nodo.ecommerce.clientId=${NODO_ECOMMERCE_CLIENT_ID}
 nodo.nodeforpsp.apikey=${NODO_NODEFORPSP_API_KEY}
-nodo.nodeforpm.apikey=${NODO_NODEFORPM_API_KEY}
+nodo.nodeforecommerce.apikey=${NODO_NODEFORECOMMERCE_API_KEY}
 
 ecommercePaymentMethods.uri=${ECOMMERCE_PAYMENT_METHODS_URI}
 ecommercePaymentMethods.readTimeout=${ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT}
