--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -9,7 +9,7 @@ nodo.parallelRequests=5
 nodo.allCCPOnTransferIbanEnabled=true
 nodo.ecommerce.clientId=ecomm
 nodo.nodeforpsp.apikey=key
-nodo.nodeforpm.apikey=key
+nodo.nodeforecommerce.apikey=key
 
 nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
