--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,6 +89,8 @@ npg.authorization.satispay.keys=${NPG_SATISPAY_PSP_KEYS}
 npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
 npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
 npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
+npg.authorization.googlepay.keys=${NPG_GOOGLE_PAY_PSP_KEYS}
+npg.authorization.googlepay.pspList=${NPG_GOOGLE_PAY_PSP_LIST}
 authorization.event.visibilityTimeoutSeconds=${AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS}
 npg.authorization.retry.excluded.error.codes=${NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
