fix: update env example

--- a/.env.example
+++ b/.env.example
@@ -84,6 +84,8 @@ NPG_APPLEPAY_PSP_LIST=BCITITMM
 NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-applepay"}
 NPG_SATISPAY_PSP_LIST=BCITITMM
 NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-satispay"}
+NPG_GOOGLE_PAY_PSP_LIST=BCITITMM
+NPG_GOOGLE_PAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-googlepay"}
 NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES=GW0035,GW0004
 TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
