fix: helm values

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -160,7 +160,7 @@ microservice-chart:
     NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
     NPG_SATISPAY_PSP_LIST: "SATYLUL1"
     NPG_APPLEPAY_PSP_LIST: "SIGPITM1XXX,CIPBITMM"
-    NPG_GOOGLE_PAY_PSP_KEYS: "CIPBITMM"
+    NPG_GOOGLE_PAY_PSP_LIST: "CIPBITMM"
     AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS: "0"
     TRANSACTION_DOCUMENT_TTL: "600"
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
