--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -311,7 +311,7 @@ paths:
     get:
       tags:
         - transactions
-      operationId: transactionOutcomes
+      operationId: getTransactionOutcomes
       summary: Get transaction outcome
       description: Return outcome information for the input specific transaction resource
       parameters:
