add ignored exception

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,20 @@ resilience4j.retry:
         - it.pagopa.transactions.exceptions.TransactionAmountMismatchException
         - it.pagopa.transactions.exceptions.NodoErrorException
         - it.pagopa.transactions.exceptions.InvalidNodoResponseException
+    getTransactionOutcome:
+      maxAttempts: 3
+      waitDuration: 2s
+      enableExponentialBackoff: false
+      ignoreExceptions:
+        - it.pagopa.transactions.exceptions.UnsatisfiablePspRequestException
+        - it.pagopa.transactions.exceptions.PaymentNoticeAllCCPMismatchException
+        - it.pagopa.transactions.exceptions.TransactionNotFoundException
+        - it.pagopa.transactions.exceptions.AlreadyProcessedException
+        - it.pagopa.transactions.exceptions.NotImplementedException
+        - it.pagopa.transactions.exceptions.InvalidRequestException
+        - it.pagopa.transactions.exceptions.TransactionAmountMismatchException
+        - it.pagopa.transactions.exceptions.NodoErrorException
+        - it.pagopa.transactions.exceptions.InvalidNodoResponseException
     requestTransactionAuthorization:
       maxAttempts: 3
       waitDuration: 2s
