pass auth code mapping and ecommerce state via yaml config file

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -161,6 +161,7 @@ microservice-chart:
     NPG_SATISPAY_PSP_LIST: "SATYLUL1"
     NPG_APPLEPAY_PSP_LIST: "SIGPITM1XXX,CIPBITMM"
     NPG_GOOGLE_PAY_PSP_LIST: "CIPBITMM"
+    NPG_AUTHORIZATION_ERROR_CODE_MAPPING: '{"907":"25","908":"25","909":"25","110":"3","111":"7","210":"3","115":"25","116":"116","413":"2","117":"117","118":"3","119":"2","911":"25","999":"25","913":"25","120":"2","121":"121","100":"2","122":"2","101":"7","123":"2","200":"2","102":"2","124":"2","125":"3","202":"2","104":"3","126":"2","204":"2","106":"2","129":"2","888":"2","109":"25","208":"3","209":"3","902":"2","903":"2","904":"25","906":"25"}'
     AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS: "0"
     TRANSACTION_DOCUMENT_TTL: "600"
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
@@ -179,6 +180,8 @@ microservice-chart:
     CHECKOUT_OUTCOME_URL: "https://dev.checkout.pagopa.it/esito"
     NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES: "GW0035,GW0004"
     EXCLUSIVE_LOCK_DOCUMENT_TTL_SECONDS: "2"
+    ECOMMERCE_FINAL_STATES: "NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED"
+    ECOMMERCE_POSSIBLE_FINAL_STATES: "AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-access-key
