--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,11 +91,14 @@ npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
 npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
 npg.authorization.googlepay.keys=${NPG_GOOGLE_PAY_PSP_KEYS}
 npg.authorization.googlepay.pspList=${NPG_GOOGLE_PAY_PSP_LIST}
+npg.authorizationErrorCodeMapping=${NPG_AUTHORIZATION_ERROR_CODE_MAPPING}
 authorization.event.visibilityTimeoutSeconds=${AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS}
 npg.authorization.retry.excluded.error.codes=${NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
+ecommerce.finalStates=NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED
+ecommerce.possibleFinalStates=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR
 
 sessionUrl.basePath=${SESSION_URL_BASEPATH}
 sessionUrl.outcomeSuffix=${SESSION_URL_OUTCOME_SUFFIX}
