--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -78,6 +78,7 @@ npg.authorization.applepay.keys={"psp1-applepay":"applepay-key1","psp2-applepay"
 npg.authorization.applepay.pspList=psp1-applepay,psp2-applepay
 npg.authorization.googlepay.keys={"psp1-googlepay":"googlepay-key1","psp2-googlepay":"googlepay-key2"}
 npg.authorization.googlepay.pspList=psp1-googlepay,psp2-googlepay
+npg.authorizationErrorCodeMapping={"907":"25","908":"25","909":"25","110":"3","111":"7","210":"3","115":"25","116":"116","413":"2","117":"117","118":"3","119":"2","911":"25","999":"25","913":"25","120":"2","121":"121","100":"2","122":"2","101":"7","123":"2","200":"2","102":"2","124":"2","125":"3","202":"2","104":"3","126":"2","204":"2","106":"2","129":"2","888":"2","109":"25","208":"3","209":"3","902":"2","903":"2","904":"25","906":"25"}
 authorization.event.visibilityTimeoutSeconds=0
 npg.authorization.retry.excluded.error.codes=GW0004,GW0035
 ecommerce.event.version=V2
@@ -95,3 +96,6 @@ redirect.pspUrlMapping={"CHECKOUT-psp1-RBPR":'http://localhost:8096/redirections
 redirect.paymentTypeCodeDescriptionMapping={"RBPR":"Poste addebito in conto Retail","RBPB":"Poste addebito in conto Business","RBPP":"Paga con BottonePostePay","RPIC":"Pago in Conto Intesa","RBPS":"SCRIGNO Internet Banking","RICO":"Conto ICONTO"}
 node.forwarder.readTimeout=10000
 node.forwarder.connectionTimeout=10000
+
+ecommerce.finalStates=NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED
+ecommerce.possibleFinalStates=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR
