--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -770,7 +770,7 @@ components:
           $ref: '#/components/schemas/AmountEuroCents'
         isFinalStatus:
           type: boolean
-          description: "A flag that describe the outcome as final or not. If true, the outcome will not change in the future ad the client polling can stop."
+          description: "A flag that describe the outcome as final or not. If true, the outcome will not change in the future and the client can interrupt polling"
       required:
         - outcome
         - isFinalStatus
