--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -771,7 +771,7 @@ components:
           description: "The total amount paid for the transaction in eurocents"
         fees:
           $ref: '#/components/schemas/AmountEuroCents'
-          description: "The total fees paid for the payment notice"
+          description: "The total fees paid for the transaction in eurocents"
         isFinalStatus:
           type: boolean
           description: "A flag that describe the outcome as final or not. If true, the outcome will not change in the future and the client can interrupt polling"
